--- a/notebooks/03_graph_and_routing.ipynb
+++ b/notebooks/03_graph_and_routing.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "33cbdbce",
    "metadata": {},
    "outputs": [],
@@ -37,6 +37,13 @@
     "from typing import Dict, Iterable, List, Optional, Sequence, Tuple, Union\n",
     "\n",
     "import folium\n",
+    "\n",
+    "# set project root\n",
+    "from pathlib import Path\n",
+    "import sys\n",
+    "\n",
+    "PROJECT_ROOT = Path.cwd().parent\n",
+    "sys.path.append(str(PROJECT_ROOT))\n",
     "\n",
     "# module imports\n",
     "from src.routing_graph import (\n",
@@ -57,17 +64,7 @@
     "    path_to_multiline_latlon,\n",
     ")\n",
     "\n",
-    "# set project root\n",
-    "from pathlib import Path\n",
-    "import sys\n",
-    "\n",
-    "PROJECT_ROOT = Path.cwd().parent\n",
-    "sys.path.append(str(PROJECT_ROOT))\n",
-    "\n",
-    "# Save map to figs folder\n",
-    "fig_dir = PROJECT_ROOT / \"figs\"\n",
-    "fig_dir.mkdir(parents=True, exist_ok=True)\n",
-    "\n"
+    "DATA_DIR = Path(\"..\") / \"data\" / \"panel\"\n"
    ]
   },
   {
@@ -80,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 2,
    "id": "dcc22668",
    "metadata": {},
    "outputs": [
@@ -126,13 +123,13 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>29872</td>\n",
+       "      <td>20226</td>\n",
        "      <td>2021</td>\n",
        "      <td>4</td>\n",
        "      <td>POINT (13.48861 52.46449)</td>\n",
        "      <td>weekday</td>\n",
        "      <td>work_hours (7h-18h)</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
        "      <td>5</td>\n",
        "      <td>1</td>\n",
        "      <td>2</td>\n",
@@ -145,32 +142,13 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>25448</td>\n",
-       "      <td>2024</td>\n",
-       "      <td>3</td>\n",
-       "      <td>POINT (13.19382 52.5337)</td>\n",
-       "      <td>weekend</td>\n",
-       "      <td>work_hours (7h-18h)</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>3</td>\n",
-       "      <td>5</td>\n",
-       "      <td>3</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>False</td>\n",
-       "      <td>13.193820</td>\n",
-       "      <td>52.533695</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>9074</td>\n",
+       "      <td>3881</td>\n",
        "      <td>2019</td>\n",
        "      <td>9</td>\n",
        "      <td>POINT (13.60631 52.45275)</td>\n",
        "      <td>weekday</td>\n",
        "      <td>night (22h-7h)</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>1</td>\n",
        "      <td>2</td>\n",
        "      <td>5</td>\n",
        "      <td>3</td>\n",
@@ -182,14 +160,14 @@
        "      <td>52.452751</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>6943</td>\n",
+       "      <th>2</th>\n",
+       "      <td>1750</td>\n",
        "      <td>2019</td>\n",
        "      <td>5</td>\n",
        "      <td>POINT (13.3133 52.57682)</td>\n",
        "      <td>weekday</td>\n",
        "      <td>work_hours (7h-18h)</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
        "      <td>2</td>\n",
        "      <td>5</td>\n",
        "      <td>3</td>\n",
@@ -201,14 +179,14 @@
        "      <td>52.576824</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>7115</td>\n",
+       "      <th>3</th>\n",
+       "      <td>1922</td>\n",
        "      <td>2019</td>\n",
        "      <td>5</td>\n",
        "      <td>POINT (13.68352 52.37053)</td>\n",
        "      <td>weekday</td>\n",
        "      <td>evening (18h-22h)</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
@@ -218,6 +196,25 @@
        "      <td>False</td>\n",
        "      <td>13.683520</td>\n",
        "      <td>52.370531</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>13090</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>8</td>\n",
+       "      <td>POINT (13.45826 52.48577)</td>\n",
+       "      <td>weekday</td>\n",
+       "      <td>evening (18h-22h)</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1482.0</td>\n",
+       "      <td>1518.0</td>\n",
+       "      <td>9.360363</td>\n",
+       "      <td>True</td>\n",
+       "      <td>13.458259</td>\n",
+       "      <td>52.485774</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -239,52 +236,52 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>21661</th>\n",
-       "      <td>2500</td>\n",
-       "      <td>2018</td>\n",
-       "      <td>6</td>\n",
-       "      <td>POINT (13.34109 52.4852)</td>\n",
+       "      <th>15391</th>\n",
+       "      <td>3319</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>8</td>\n",
+       "      <td>POINT (13.21397 52.53838)</td>\n",
        "      <td>weekday</td>\n",
        "      <td>work_hours (7h-18h)</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
        "      <td>5</td>\n",
+       "      <td>3</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>False</td>\n",
+       "      <td>13.213969</td>\n",
+       "      <td>52.538384</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15392</th>\n",
+       "      <td>6510</td>\n",
+       "      <td>2020</td>\n",
+       "      <td>4</td>\n",
+       "      <td>POINT (13.32488 52.50253)</td>\n",
+       "      <td>weekday</td>\n",
+       "      <td>night (22h-7h)</td>\n",
+       "      <td>2</td>\n",
        "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "      <td>3</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>False</td>\n",
-       "      <td>13.341093</td>\n",
-       "      <td>52.485197</td>\n",
+       "      <td>13.324880</td>\n",
+       "      <td>52.502526</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>21662</th>\n",
-       "      <td>1817</td>\n",
-       "      <td>2018</td>\n",
-       "      <td>5</td>\n",
-       "      <td>POINT (13.44447 52.53412)</td>\n",
-       "      <td>weekday</td>\n",
-       "      <td>work_hours (7h-18h)</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>7</td>\n",
-       "      <td>6</td>\n",
-       "      <td>3</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>False</td>\n",
-       "      <td>13.444473</td>\n",
-       "      <td>52.534120</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>21663</th>\n",
-       "      <td>32165</td>\n",
+       "      <th>15393</th>\n",
+       "      <td>22519</td>\n",
        "      <td>2021</td>\n",
        "      <td>9</td>\n",
        "      <td>POINT (13.45723 52.56107)</td>\n",
        "      <td>weekday</td>\n",
        "      <td>evening (18h-22h)</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
        "      <td>2</td>\n",
        "      <td>5</td>\n",
        "      <td>3</td>\n",
@@ -296,14 +293,14 @@
        "      <td>52.561067</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>21664</th>\n",
-       "      <td>29554</td>\n",
+       "      <th>15394</th>\n",
+       "      <td>21785</td>\n",
        "      <td>2021</td>\n",
-       "      <td>3</td>\n",
+       "      <td>7</td>\n",
        "      <td>POINT (13.55801 52.45571)</td>\n",
        "      <td>weekday</td>\n",
        "      <td>work_hours (7h-18h)</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
        "      <td>2</td>\n",
        "      <td>5</td>\n",
        "      <td>3</td>\n",
@@ -315,14 +312,14 @@
        "      <td>52.455714</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>21665</th>\n",
-       "      <td>31431</td>\n",
+       "      <th>15395</th>\n",
+       "      <td>19908</td>\n",
        "      <td>2021</td>\n",
-       "      <td>7</td>\n",
+       "      <td>3</td>\n",
        "      <td>POINT (13.55801 52.45571)</td>\n",
        "      <td>weekday</td>\n",
        "      <td>work_hours (7h-18h)</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
        "      <td>2</td>\n",
        "      <td>5</td>\n",
        "      <td>3</td>\n",
@@ -335,74 +332,74 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>21666 rows × 16 columns</p>\n",
+       "<p>15396 rows × 16 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "       acc_id  year  month                   geometry weekday_type  \\\n",
-       "0       29872  2021      4  POINT (13.48861 52.46449)      weekday   \n",
-       "1       25448  2024      3   POINT (13.19382 52.5337)      weekend   \n",
-       "2        9074  2019      9  POINT (13.60631 52.45275)      weekday   \n",
-       "3        6943  2019      5   POINT (13.3133 52.57682)      weekday   \n",
-       "4        7115  2019      5  POINT (13.68352 52.37053)      weekday   \n",
+       "0       20226  2021      4  POINT (13.48861 52.46449)      weekday   \n",
+       "1        3881  2019      9  POINT (13.60631 52.45275)      weekday   \n",
+       "2        1750  2019      5   POINT (13.3133 52.57682)      weekday   \n",
+       "3        1922  2019      5  POINT (13.68352 52.37053)      weekday   \n",
+       "4       13090  2022      8  POINT (13.45826 52.48577)      weekday   \n",
        "...       ...   ...    ...                        ...          ...   \n",
-       "21661    2500  2018      6   POINT (13.34109 52.4852)      weekday   \n",
-       "21662    1817  2018      5  POINT (13.44447 52.53412)      weekday   \n",
-       "21663   32165  2021      9  POINT (13.45723 52.56107)      weekday   \n",
-       "21664   29554  2021      3  POINT (13.55801 52.45571)      weekday   \n",
-       "21665   31431  2021      7  POINT (13.55801 52.45571)      weekday   \n",
+       "15391    3319  2019      8  POINT (13.21397 52.53838)      weekday   \n",
+       "15392    6510  2020      4  POINT (13.32488 52.50253)      weekday   \n",
+       "15393   22519  2021      9  POINT (13.45723 52.56107)      weekday   \n",
+       "15394   21785  2021      7  POINT (13.55801 52.45571)      weekday   \n",
+       "15395   19908  2021      3  POINT (13.55801 52.45571)      weekday   \n",
        "\n",
        "               time_of_day  light_condition  accident_type  accident_kind  \\\n",
-       "0      work_hours (7h-18h)              0.0              5              1   \n",
-       "1      work_hours (7h-18h)              0.0              3              5   \n",
-       "2           night (22h-7h)              1.0              2              5   \n",
-       "3      work_hours (7h-18h)              0.0              2              5   \n",
-       "4        evening (18h-22h)              0.0              1              0   \n",
+       "0      work_hours (7h-18h)                0              5              1   \n",
+       "1           night (22h-7h)                1              2              5   \n",
+       "2      work_hours (7h-18h)                0              2              5   \n",
+       "3        evening (18h-22h)                0              1              0   \n",
+       "4        evening (18h-22h)                0              1              0   \n",
        "...                    ...              ...            ...            ...   \n",
-       "21661  work_hours (7h-18h)              0.0              5              1   \n",
-       "21662  work_hours (7h-18h)              0.0              7              6   \n",
-       "21663    evening (18h-22h)              0.0              2              5   \n",
-       "21664  work_hours (7h-18h)              0.0              2              5   \n",
-       "21665  work_hours (7h-18h)              0.0              2              5   \n",
+       "15391  work_hours (7h-18h)                0              2              5   \n",
+       "15392       night (22h-7h)                2              1              0   \n",
+       "15393    evening (18h-22h)                0              2              5   \n",
+       "15394  work_hours (7h-18h)                0              2              5   \n",
+       "15395  work_hours (7h-18h)                0              2              5   \n",
        "\n",
        "       injury_severity  index_node  node_id  dist_node  has_crossing  \\\n",
        "0                    2         NaN      NaN        NaN         False   \n",
        "1                    3         NaN      NaN        NaN         False   \n",
        "2                    3         NaN      NaN        NaN         False   \n",
-       "3                    3         NaN      NaN        NaN         False   \n",
-       "4                    1         NaN      NaN        NaN         False   \n",
+       "3                    1         NaN      NaN        NaN         False   \n",
+       "4                    3      1482.0   1518.0   9.360363          True   \n",
        "...                ...         ...      ...        ...           ...   \n",
-       "21661                3         NaN      NaN        NaN         False   \n",
-       "21662                3         NaN      NaN        NaN         False   \n",
-       "21663                3         NaN      NaN        NaN         False   \n",
-       "21664                3      1790.0   1852.0  15.145493          True   \n",
-       "21665                3      1790.0   1852.0  15.145493          True   \n",
+       "15391                3         NaN      NaN        NaN         False   \n",
+       "15392                3         NaN      NaN        NaN         False   \n",
+       "15393                3         NaN      NaN        NaN         False   \n",
+       "15394                3      1790.0   1852.0  15.145493          True   \n",
+       "15395                3      1790.0   1852.0  15.145493          True   \n",
        "\n",
        "       longitude   latitude  \n",
        "0      13.488608  52.464495  \n",
-       "1      13.193820  52.533695  \n",
-       "2      13.606309  52.452751  \n",
-       "3      13.313300  52.576824  \n",
-       "4      13.683520  52.370531  \n",
+       "1      13.606309  52.452751  \n",
+       "2      13.313300  52.576824  \n",
+       "3      13.683520  52.370531  \n",
+       "4      13.458259  52.485774  \n",
        "...          ...        ...  \n",
-       "21661  13.341093  52.485197  \n",
-       "21662  13.444473  52.534120  \n",
-       "21663  13.457235  52.561067  \n",
-       "21664  13.558009  52.455714  \n",
-       "21665  13.558009  52.455714  \n",
+       "15391  13.213969  52.538384  \n",
+       "15392  13.324880  52.502526  \n",
+       "15393  13.457235  52.561067  \n",
+       "15394  13.558009  52.455714  \n",
+       "15395  13.558009  52.455714  \n",
        "\n",
-       "[21666 rows x 16 columns]"
+       "[15396 rows x 16 columns]"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "junction_df = gpd.read_parquet(\"../data/merged/berlin_bike_accident_node_panel.parquet\")\n",
-    "acc_node_df = gpd.read_parquet(\"../data/merged/acc_node.parquet\")\n",
-    "segments_df = gpd.read_parquet(\"../data/merged/berlin_bike_accident_strava_risk_core_panel.parquet\")\n",
+    "acc_node_df = gpd.read_parquet(DATA_DIR / \"acc_node.parquet\")\n",
+    "segments_df = gpd.read_parquet(DATA_DIR / \"segments_with_risk.parquet\")\n",
+    "junction_df = gpd.read_parquet(DATA_DIR / \"junctions_with_risk.parquet\")\n",
     "\n",
     "# Ensure expected CRS for folium (lat/lon)\n",
     "junction_df = junction_df.to_crs(epsg=4326)\n",
@@ -442,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 3,
    "id": "7d7398e8",
    "metadata": {},
    "outputs": [],
@@ -482,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "a543dd86",
    "metadata": {},
    "outputs": [],
@@ -547,7 +544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "id": "807a5030",
    "metadata": {},
    "outputs": [
@@ -555,16 +552,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'n_nodes': 3074, 'n_edges': 4395, 'seg_risk_min': 0.0, 'seg_risk_median': 0.0, 'seg_risk_max': 4000.0, 'risk_total_median': 0.0, 'risk_total_max': 4000.0, 'length_median': 371.8095742150327, 'node_penalty_nonzero_share': 0.08964732650739476, 'graph_node_ids_attached': 2882, 'notes': 'Attached node_id to 2882/3074 graph nodes (snap<= 20.0m). Risk objective uses eta=1.0 for junction penalty weighting.'}\n",
+      "{'n_nodes': 3010, 'n_edges': 4221, 'seg_risk_min': 0.032740729463619146, 'seg_risk_median': 1.0, 'seg_risk_max': 50.79079727780798, 'risk_total_median': 2.0, 'risk_total_max': 51.79079727780798, 'length_median': 368.67571338012334, 'node_penalty_nonzero_share': 0.9983416252072969, 'graph_node_ids_attached': 2835, 'notes': 'Attached node_id to 2835/3010 graph nodes (snap<= 20.0m). Risk objective uses eta=1.0 for junction penalty weighting.'}\n",
       "          delta_L     delta_R\n",
-      "count  300.000000  281.000000\n",
-      "mean     0.041628    0.738203\n",
-      "std      0.031892    0.340096\n",
+      "count  300.000000  300.000000\n",
+      "mean     0.033051    0.165366\n",
+      "std      0.030778    0.139595\n",
       "min      0.000000    0.000000\n",
-      "25%      0.010479    0.609771\n",
-      "50%      0.040833    0.902206\n",
-      "75%      0.068713    1.000000\n",
-      "max      0.099990    1.000000\n"
+      "25%      0.004730    0.035331\n",
+      "50%      0.026314    0.148192\n",
+      "75%      0.055243    0.255096\n",
+      "max      0.098441    0.560290\n"
      ]
     }
    ],
@@ -762,7 +759,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "id": "c5e849d9",
    "metadata": {},
    "outputs": [],
@@ -809,7 +806,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "id": "77f61de3",
    "metadata": {},
    "outputs": [
@@ -819,7 +816,7 @@
        "{}"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -845,7 +842,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.14.0"
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
