--- a/notebooks/04_paper.ipynb
+++ b/notebooks/04_paper.ipynb
@@ -63,7 +63,9 @@
     "    constrained_min_risk_route,\n",
     "    run_one_od_routing,\n",
     "    path_to_multiline_latlon,\n",
-    ")\n"
+    ")\n",
+    "\n",
+    "DATA_DIR = Path(\"..\") / \"data\" / \"panel\""
    ]
   },
   {
@@ -76,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "fb246427",
    "metadata": {},
    "outputs": [
@@ -84,25 +86,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "segments_df: (297480, 66)\n",
-      "junction_df: (177334, 64)\n",
-      "crossings_gdf: (2924, 2)\n",
+      "segments_df: (260100, 204)\n",
+      "junction_df: (171720, 6)\n",
+      "crossings_gdf: (2862, 2)\n",
       "accidents_df: (23535, 30)\n"
      ]
     }
    ],
    "source": [
-    "accidents_df = pd.read_csv(\n",
-    "    \"../data/panel/berlin_bike_accidents.csv\"\n",
-    ")\n",
+    "accidents_df = pd.read_csv(DATA_DIR / \"berlin_bike_accidents.csv\")\n",
     "\n",
-    "segments_df = gpd.read_parquet(\n",
-    "    \"../data/merged/berlin_bike_accident_strava_risk_core_panel.parquet\"\n",
-    ").to_crs(epsg=4326)\n",
-    "\n",
-    "junction_df = gpd.read_parquet(\n",
-    "    \"../data/panel/berlin_bike_node_exposure_panel.parquet\"\n",
-    ").to_crs(epsg=4326)\n",
+    "segments_df = gpd.read_parquet(DATA_DIR / \"berlin_bike_accident_strava_risk_core_panel.parquet\")\n",
+    "junction_df = gpd.read_parquet(DATA_DIR / \"berlin_bike_accident_node_panel.parquet\")\n",
     "\n",
     "# one geometry per node_id\n",
     "crossings_gdf = (\n",
@@ -121,19 +116,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "44b1c3cd",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ok\n",
-      "{'n_nodes': 3074, 'n_edges': 4395, 'seg_risk_min': 0.0, 'seg_risk_median': 0.0, 'seg_risk_max': 4000.0, 'risk_total_median': 0.0, 'risk_total_max': 4000.0, 'length_median': 371.8095742150327, 'node_penalty_nonzero_share': 0.08964732650739476, 'graph_node_ids_attached': 2882, 'notes': 'Attached node_id to 2882/3074 graph nodes (snap<= 20.0m). Risk objective uses eta=1.0 for junction penalty weighting.'}\n",
-      "Shortest length stats: {'length_m': 6599.195578921126, 'seg_risk_sum': 0.0, 'node_penalty_sum': 0.0, 'risk_total_sum': 0.0}\n",
-      "Constrained min-risk stats: {'length_m': 6599.195578921126, 'seg_risk_sum': 0.0, 'node_penalty_sum': 0.0, 'risk_total_sum': 0.0}\n",
-      "ΔL: 0.0 ΔR: None\n"
+     "ename": "KeyError",
+     "evalue": "\"Missing risk column. Tried: ('risk_accidents_per_10k_trips', 'risk_accidents_per_trip')\"",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mKeyError\u001b[39m                                  Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[3]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;66;03m# Example usage of run_one_od_routing\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m result = \u001b[43mrun_one_od_routing\u001b[49m\u001b[43m(\u001b[49m\n\u001b[32m      3\u001b[39m \u001b[43m    \u001b[49m\u001b[43msegments_panel_gdf\u001b[49m\u001b[43m=\u001b[49m\u001b[43msegments_df\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m      4\u001b[39m \u001b[43m    \u001b[49m\u001b[43mcrossings_gdf\u001b[49m\u001b[43m=\u001b[49m\u001b[43mcrossings_gdf\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m      5\u001b[39m \u001b[43m    \u001b[49m\u001b[43mjunction_panel_gdf\u001b[49m\u001b[43m=\u001b[49m\u001b[43mjunction_df\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m      6\u001b[39m \u001b[43m    \u001b[49m\u001b[43myear\u001b[49m\u001b[43m=\u001b[49m\u001b[32;43m2021\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mmonth\u001b[49m\u001b[43m=\u001b[49m\u001b[32;43m6\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[32m      7\u001b[39m \u001b[43m    \u001b[49m\u001b[43morigin_lonlat\u001b[49m\u001b[43m=\u001b[49m\u001b[43m(\u001b[49m\u001b[32;43m13.3777\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[32;43m52.5163\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m      8\u001b[39m \u001b[43m    \u001b[49m\u001b[43mdest_lonlat\u001b[49m\u001b[43m=\u001b[49m\u001b[43m(\u001b[49m\u001b[32;43m13.4541\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[32;43m52.5110\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m      9\u001b[39m \u001b[43m    \u001b[49m\u001b[43meps\u001b[49m\u001b[43m=\u001b[49m\u001b[32;43m0.10\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[32m     10\u001b[39m \u001b[43m    \u001b[49m\u001b[43meta\u001b[49m\u001b[43m=\u001b[49m\u001b[32;43m1.0\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m                          \u001b[49m\n\u001b[32m     11\u001b[39m \u001b[43m)\u001b[49m\n\u001b[32m     13\u001b[39m \u001b[38;5;28mprint\u001b[39m(result[\u001b[33m\"\u001b[39m\u001b[33mstatus\u001b[39m\u001b[33m\"\u001b[39m])\n\u001b[32m     14\u001b[39m \u001b[38;5;28mprint\u001b[39m(result[\u001b[33m\"\u001b[39m\u001b[33mgraph_sanity\u001b[39m\u001b[33m\"\u001b[39m])\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/src/data_literacy/src/routing_algorithms.py:231\u001b[39m, in \u001b[36mrun_one_od_routing\u001b[39m\u001b[34m(segments_panel_gdf, crossings_gdf, junction_panel_gdf, year, month, origin_lonlat, dest_lonlat, eps, eta, metric_epsg)\u001b[39m\n\u001b[32m    210\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34mrun_one_od_routing\u001b[39m(\n\u001b[32m    211\u001b[39m     *,\n\u001b[32m    212\u001b[39m     segments_panel_gdf: gpd.GeoDataFrame,\n\u001b[32m   (...)\u001b[39m\u001b[32m    221\u001b[39m     metric_epsg: \u001b[38;5;28mint\u001b[39m = \u001b[32m32633\u001b[39m,\n\u001b[32m    222\u001b[39m ) -> Dict:\n\u001b[32m    223\u001b[39m \u001b[38;5;250m    \u001b[39m\u001b[33;03m\"\"\"\u001b[39;00m\n\u001b[32m    224\u001b[39m \u001b[33;03m    Builds the month graph, snaps OD to graph nodes, and returns:\u001b[39;00m\n\u001b[32m    225\u001b[39m \u001b[33;03m      - shortest-by-length route (P_dist)\u001b[39;00m\n\u001b[32m   (...)\u001b[39m\u001b[32m    229\u001b[39m \u001b[33;03m    origin_lonlat/dest_lonlat are (lon, lat) in EPSG:4326.\u001b[39;00m\n\u001b[32m    230\u001b[39m \u001b[33;03m    \"\"\"\u001b[39;00m\n\u001b[32m--> \u001b[39m\u001b[32m231\u001b[39m     artifacts = \u001b[43mbuild_graph_with_risk_for_month\u001b[49m\u001b[43m(\u001b[49m\n\u001b[32m    232\u001b[39m \u001b[43m        \u001b[49m\u001b[43msegments_panel_gdf\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    233\u001b[39m \u001b[43m        \u001b[49m\u001b[43myear\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    234\u001b[39m \u001b[43m        \u001b[49m\u001b[43mmonth\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    235\u001b[39m \u001b[43m        \u001b[49m\u001b[43mcrossings_gdf\u001b[49m\u001b[43m=\u001b[49m\u001b[43mcrossings_gdf\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    236\u001b[39m \u001b[43m        \u001b[49m\u001b[43mjunction_panel_gdf\u001b[49m\u001b[43m=\u001b[49m\u001b[43mjunction_panel_gdf\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    237\u001b[39m \u001b[43m        \u001b[49m\u001b[43mgraph_cfg\u001b[49m\u001b[43m=\u001b[49m\u001b[43mGraphBuildConfig\u001b[49m\u001b[43m(\u001b[49m\u001b[43mmetric_epsg\u001b[49m\u001b[43m=\u001b[49m\u001b[43mmetric_epsg\u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    238\u001b[39m \u001b[43m        \u001b[49m\u001b[43mrisk_cfg\u001b[49m\u001b[43m=\u001b[49m\u001b[43mRiskConfig\u001b[49m\u001b[43m(\u001b[49m\u001b[43meta\u001b[49m\u001b[43m=\u001b[49m\u001b[43meta\u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    239\u001b[39m \u001b[43m        \u001b[49m\u001b[43mnode_snap_m\u001b[49m\u001b[43m=\u001b[49m\u001b[32;43m20.0\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[32m    240\u001b[39m \u001b[43m    \u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    242\u001b[39m     sanity = verify_graph_sanity(\n\u001b[32m    243\u001b[39m         artifacts,\n\u001b[32m    244\u001b[39m         expect_junction_penalties=(eta != \u001b[32m0.0\u001b[39m),\n\u001b[32m    245\u001b[39m     )\n\u001b[32m    247\u001b[39m     G = artifacts.G\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/src/data_literacy/src/routing_graph.py:401\u001b[39m, in \u001b[36mbuild_graph_with_risk_for_month\u001b[39m\u001b[34m(segments_panel_gdf, year, month, crossings_gdf, junction_panel_gdf, graph_cfg, node_risk_col, node_snap_m, node_risk_fallback_strategy, node_risk_fallback_default, risk_cfg)\u001b[39m\n\u001b[32m    379\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34mbuild_graph_with_risk_for_month\u001b[39m(\n\u001b[32m    380\u001b[39m     segments_panel_gdf: gpd.GeoDataFrame,\n\u001b[32m    381\u001b[39m     year: \u001b[38;5;28mint\u001b[39m,\n\u001b[32m   (...)\u001b[39m\u001b[32m    391\u001b[39m     risk_cfg: RiskConfig = RiskConfig(eta=\u001b[32m1.0\u001b[39m),\n\u001b[32m    392\u001b[39m ) -> RoutingMonthArtifacts:\n\u001b[32m    393\u001b[39m \u001b[38;5;250m    \u001b[39m\u001b[33;03m\"\"\"\u001b[39;00m\n\u001b[32m    394\u001b[39m \u001b[33;03m    Build the month-specific routing graph and attach cost/risk attributes.\u001b[39;00m\n\u001b[32m    395\u001b[39m \n\u001b[32m   (...)\u001b[39m\u001b[32m    399\u001b[39m \u001b[33;03m      4) Add edge costs and risk_total (segment + eta * junction penalty)\u001b[39;00m\n\u001b[32m    400\u001b[39m \u001b[33;03m    \"\"\"\u001b[39;00m\n\u001b[32m--> \u001b[39m\u001b[32m401\u001b[39m     G = \u001b[43mbuild_routing_graph_for_month\u001b[49m\u001b[43m(\u001b[49m\u001b[43msegments_panel_gdf\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43myear\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mmonth\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mconfig\u001b[49m\u001b[43m=\u001b[49m\u001b[43mgraph_cfg\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    403\u001b[39m     node_risk_lookup: Dict[\u001b[38;5;28mstr\u001b[39m, \u001b[38;5;28mfloat\u001b[39m] = {}\n\u001b[32m    404\u001b[39m     used_node_risk_col: Optional[\u001b[38;5;28mstr\u001b[39m] = \u001b[38;5;28;01mNone\u001b[39;00m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/src/data_literacy/src/routing_graph.py:262\u001b[39m, in \u001b[36mbuild_routing_graph_for_month\u001b[39m\u001b[34m(segments_panel_gdf, year, month, config)\u001b[39m\n\u001b[32m    260\u001b[39m         \u001b[38;5;28;01mbreak\u001b[39;00m\n\u001b[32m    261\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m risk_col \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[32m--> \u001b[39m\u001b[32m262\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mMissing risk column. Tried: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mconfig.seg_risk_col_candidates\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m\"\u001b[39m)\n\u001b[32m    264\u001b[39m \u001b[38;5;66;03m# Ensure uniqueness at segment-month level\u001b[39;00m\n\u001b[32m    265\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m df_m[[config.seg_id_col, \u001b[33m\"\u001b[39m\u001b[33myear\u001b[39m\u001b[33m\"\u001b[39m, \u001b[33m\"\u001b[39m\u001b[33mmonth\u001b[39m\u001b[33m\"\u001b[39m]].duplicated().any():\n",
+      "\u001b[31mKeyError\u001b[39m: \"Missing risk column. Tried: ('risk_accidents_per_10k_trips', 'risk_accidents_per_trip')\""
      ]
     }
    ],
@@ -648,7 +646,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.14.0"
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
